[Linux] StackTrace symbols are not demangled https://bugs.webkit.org/show_bug.cgi?id=207933

Reviewed by Yusuke Suzuki.

Demangle symbols provided by backtrace_symbols.

* wtf/StackTrace.cpp:
(WTF::StackTrace::dump const):

Canonical link: https://commits.webkit.org/221119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257298 268f45cc-cd09-0410-ab3c-d52691b4dbfc