Source/WTF/wtf/StackTrace.cpp
@@ -130,16 +130,15 @@ void StackTrace::dump(PrintStream& out, const char* indentString) const
         const char* cxaDemangled = nullptr;
 #if HAVE(BACKTRACE_SYMBOLS)
         mangledName = symbols[i];
-#elif HAVE(DLADDR)
+#elif OS(WINDOWS)
+        if (DbgHelper::SymFromAddress(hProc, reinterpret_cast<DWORD64>(stack[i]), 0, symbolInfo))
+            mangledName = symbolInfo->Name;
+#endif
         auto demangled = demangle(stack[i]);
         if (demangled) {
             mangledName = demangled->mangledName();
             cxaDemangled = demangled->demangledName();
         }
-#elif OS(WINDOWS)
-        if (DbgHelper::SymFromAddress(hProc, reinterpret_cast<DWORD64>(stack[i]), 0, symbolInfo))
-            mangledName = symbolInfo->Name;
-#endif
         const int frameNumber = i + 1;
         if (mangledName || cxaDemangled)
             out.printf("%s%-3d %p %s\n", indentString, frameNumber, stack[i], cxaDemangled ? cxaDemangled : mangledName);
